# netwire01

./: .gitignore  .travis.yml  README.md  netwire01.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Particles.hs  Stars.hs
