name:                netwire01
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/querqueq/
license:             BSD3
license-file:        LICENSE
author:              querqueq
copyright:           2017 querqueq
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Stars, Particles
  build-depends:       base >= 4.7 && < 5
                     , netwire
                     , netwire-input
                     , netwire-input-glfw
                     , containers
                     , OpenGL
                     , GLFW-b
                     , Hipmunk
                     , StateVar
                     , FTGL
                     , random
  default-language:    Haskell2010

executable netwire01-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , netwire01
                     , netwire
                     , netwire-input
                     , netwire-input-glfw
                     , containers
                     , OpenGL
                     , GLFW-b
                     , Hipmunk
                     , StateVar
                     , FTGL
                     , random
  default-language:    Haskell2010

test-suite netwire01-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , netwire01
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/netwire01
